package com.edificio.admin.model.enums;

/** Tipo de vehiculo que ingresa con una visita (tabla VEHICULOS_VISITA.tipo). */
public enum TipoVehiculo {
    VEHICULO,
    MOTO,
    BICICLETA,
    OTRO
}
